Destinations section - Service to fetch destinations from json - Card component to hold the fetched content - Destination component to hold a carousel with the cards

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <main>
   <app-jumbotron></app-jumbotron>
+  <app-about-us></app-about-us>
+  <app-destinations></app-destinations>
 </main>
