Finish Home Page - Fixed destinations component - Created contact us component using reactiv angular form - Created footer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
 <app-header></app-header>
-<main>
-  <app-jumbotron></app-jumbotron>
-  <app-about-us></app-about-us>
-  <app-destinations></app-destinations>
-</main>
+<router-outlet></router-outlet>
