--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -51,7 +51,7 @@
         </li>
         <li class="nav-item active">
           <a
-            href="login.html"
+            routerLink="login"
             class="nav-link"
             aria-label="LogIn or create an account"
             >Join Us</a
