--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,3 +32,28 @@ p {
   unicode-bidi: isolate;
   font-weight: bold;
 }
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+  input {
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    width: 100%;
+    padding: 12px 20px;
+
+    // Custom colors
+    background-color: v.$primary-color;
+    border-color: v.$primary-color;
+
+    &:hover {
+      background-color: v.$secondary-color;
+      border-color: v.$secondary-color;
+    }
+  }
+}
