Create login form - Created login form using angular form - Made sure the form was accessible via routing configuration

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -57,3 +57,15 @@ p {
     }
   }
 }
+
+.login-page,
+.signup-page,
+.reset-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 15px;
+  background: v.$secondary-color;
+  overflow: hidden;
+}
