--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -51,7 +51,7 @@
         />
       </div>
       <div class="signup-link">
-        Not a member?<a href="signup.html">Register</a>
+        Not a member?<a routerLink="/signup">Register</a>
       </div>
     </form>
   </div>
