--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -53,7 +53,7 @@
 
     .row {
       height: 60px;
-      margin-top: 20px;
+      margin-top: 25px;
       position: relative;
 
       input {
@@ -91,7 +91,7 @@
     }
 
     .pass {
-      margin-top: 12px;
+      margin-top: 18px;
 
       a {
         color: v.$primary-color;
@@ -105,8 +105,28 @@
     }
 
     .button {
-      // Button styles are handled in components/_button.scss
-      @extend .button;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+
+      input {
+        margin-top: 27px;
+        font-size: 20px;
+        font-weight: 500;
+        text-align: center;
+        width: 100%;
+        padding: 12px 20px;
+
+        // Custom colors
+        background-color: v.$primary-color;
+        border-color: v.$primary-color;
+
+        &:hover {
+          background-color: v.$accent-color;
+          border-color: v.$accent-color;
+        }
+      }
     }
 
     .signup-link {
