Admin dashboard - Created admin-dashbaord component - Implementet a service to fetch the users - Users are redirected based on their role

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -50,6 +50,9 @@
           [disabled]="loginForm.invalid"
         />
       </div>
+      <div *ngIf="loginError" class="text-danger">
+        {{ loginError }}
+      </div>
       <div class="signup-link">
         Not a member?<a routerLink="/signup">Register</a>
       </div>
