Jumbotron button ridirection fix

--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -6,7 +6,7 @@
       unforgettable experiences. Let us turn your travel dreams into reality.
     </p>
     <a
-      href="login.html"
+      routerLink="login"
       class="btn btn-primary btn-lg"
       role="button"
       aria-label="LogIn or create an account"
